--- a/modules/dxp/apps/commerce/commerce-shop-by-diagram/commerce-shop-by-diagram-web/package.json
+++ b/modules/dxp/apps/commerce/commerce-shop-by-diagram/commerce-shop-by-diagram-web/package.json
@@ -7,6 +7,7 @@
 		"@clayui/drop-down": "3.32.0",
 		"@clayui/form": "3.32.0",
 		"@clayui/icon": "3.32.0",
+		"@clayui/loading-indicator": "3.32.0",
 		"@clayui/modal": "3.32.0",
 		"@clayui/slider": "3.32.0",
 		"@liferay/frontend-js-react-web": "*",
