COMMERCE-8873 account_selector refactoring

--- a/modules/apps/commerce/commerce-frontend-taglib/package.json
+++ b/modules/apps/commerce/commerce-frontend-taglib/package.json
@@ -1,7 +1,8 @@
 {
 	"dependencies": {
+		"commerce-frontend-js": "*"
 	},
-	"name": "commerce-frontend-taglib",
+	"name": "@liferay/commerce-frontend-taglib",
 	"scripts": {
 		"build": "liferay-npm-scripts build",
 		"checkFormat": "liferay-npm-scripts check",
